fix: prevent page scrolling with modal open on mobile devices

--- a/portfolio/style-modules/common/_page-layout.scss
+++ b/portfolio/style-modules/common/_page-layout.scss
@@ -4,12 +4,12 @@ html {
   scroll-behavior: smooth;
 }
 
-main {
+html, body {
   overflow-x: hidden;
-}
 
-.fixed-body {
-  overflow: hidden;
+  &.fixed-body {
+    overflow-y: hidden;
+  }
 }
 
 //==== Sections ====
