--- a/portfolio/style-modules/components/_burger.scss
+++ b/portfolio/style-modules/components/_burger.scss
@@ -6,6 +6,7 @@
   width: 60px;
   height: 60px;
   padding: 25px 20px;
+  cursor: pointer;
 
   .line {
     height: 2px;
